--- a/index.css
+++ b/index.css
@@ -16,9 +16,7 @@ body {
   background-size: cover;
   opacity: 1;
 }
-.background {
-  display: flex;
-}
+
 .mainbox {
   display: flex;
   flex-direction: column;
@@ -61,7 +59,7 @@ a {
 }
 p {
   color: #cba69d;
-  font-family: _GB2312 KaiTi_GB2312;
+  font-family: "_GB2312 KaiTi_GB2312";
   font-size: 20px;
   font-weight: bold;
   text-shadow: 3px 3px 2px #0000001a;
