--- a/show.css
+++ b/show.css
@@ -85,6 +85,73 @@ body {
   width: 421.7px;
   height: 750px;
 }
+/*  */
+#sr1 {
+  margin: 2px;
+  width: 442.5px;
+  height: 750px;
+}
+#sr2 {
+  margin: 2px;
+  width: 540.5px;
+  height: 750px;
+}
+#sr3 {
+  margin: 2px;
+  width: 521.5px;
+  height: 750px;
+}
+#sr4 {
+  margin: 2px;
+  width: 500px;
+  height: 750px;
+}
+#sr5 {
+  margin: 2px;
+  width: 674px;
+  height: 750px;
+}
+#sr6 {
+  margin: 2px;
+  width: 461px;
+  height: 750px;
+}
+#sr7 {
+  margin: 2px;
+  width: 1437px;
+  height: 750px;
+}
+#sr8 {
+  margin: 2px;
+  width: 1125px;
+  height: 750px;
+}
+#sr9 {
+  margin: 2px;
+  width: 423px;
+  height: 750px;
+}
+#sr10 {
+  margin: 2px;
+  width: 530px;
+  height: 670px;
+}
+#sr11 {
+  margin: 2px;
+  width: 1500px;
+  height: 629px;
+}
+#sr12 {
+  margin: 2px;
+  width: 1005px;
+  height: 670px;
+}
+#sr13 {
+  margin: 2px;
+  width: 1316px;
+  height: 750px;
+}
+/*  */
 #s30 {
   margin: 2px;
   width: 562.5px;
