--- a/poster.css
+++ b/poster.css
@@ -73,7 +73,7 @@ body {
   position: absolute;
   perspective: 1000px;
   transition: 0.5s ease-in-out;
-  background-image: url(https://raw.githubusercontent.com/ruan-he/photos/main/PosterForNewMember);
+  background-image: url(https://raw.githubusercontent.com/ruan-he/photos/main/PosterForNewMember.png);
 }
 .mask {
   width: 1050px;
