--- a/poster.css
+++ b/poster.css
@@ -74,6 +74,10 @@ body {
   perspective: 1000px;
   transition: 0.5s ease-in-out;
   background-image: url(https://raw.githubusercontent.com/ruan-he/photos/main/PosterForNewMember.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 1;
+
 }
 .mask {
   width: 1050px;
