--- a/reminder.css
+++ b/reminder.css
@@ -4,7 +4,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-image: url("https://s2.328888.xyz/2022/06/30/62bd55626da23.png");
+  background-image: url("https://raw.githubusercontent.com/ruan-he/photos/main/reminder_background.png");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
